@@ -85,9 +85,12 @@ compile-time."
 	buf)))
 
 (defmacro w3m-tag-regexp-of (&rest names)
-  (` (concat "<\\("
-	     (mapconcat 'identity (list (,@ names)) "\\|")
-	     "\\)\\([ \t\r\f\n]+[^>]*\\)?/?>")))
+  "Return a regexp string, not a funtion form.  A regexp should match tags
+which are started with "<" and one of NAMES.  NAMES should be string
+constants, any other expressions are not allowed."
+  (concat "<\\("
+	  (mapconcat 'identity names "\\|")
+	  "\\)\\([ \t\r\f\n]+[^>]*\\)?/?>"))
 
 (defmacro w3m-cleanup-plist (plist)
   "Remove properties with the value `nil' in PLIST."
