@@ -1,5 +1,9 @@
 2001-09-11  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* w3m-macro.el (w3m-tag-regexp-of): Reverted; add a documentation.
+
+2001-09-11  Katsumi Yamaoka  <yamaoka@jpl.org>
+
 	* w3m.el (w3m-goto-url): Register post-data and a referer in the
 	history.
 	(w3m-info-like-map, w3m-lynx-like-map): Use `suppress-keymap'.
